--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>monkey.fail</title>
-<meta http-equiv="onion-location" content="http://coypu7oi7gfqny2pvkig4o2sz5nvz6qv6gxiiuuiidjfcsrp2vujyzyd.onion" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="BEHIND YOU BEHIND YOU BEHIND YOU" />
+<meta name="description" content="OOH OOH AAH AAH!!!" />
 <style>
 body {
     background-color: rgb(37, 37, 37);
